Update on Overleaf.

--- a/Zotero.bib
+++ b/Zotero.bib
@@ -1,4 +1,109 @@
 
+@inproceedings{lalejini_evolutionary_2016,
+	title = {The {Evolutionary} {Origins} of {Phenotypic} {Plasticity}},
+	url = {https://mitpress.mit.edu/sites/default/files/titles/content/conf/alife16/ch063.html},
+	doi = {10.7551/978-0-262-33936-0-ch063},
+	language = {en},
+	urldate = {2018-04-03TZ},
+	booktitle = {Proceedings of the {Artificial} {Life} {Conference} 2016},
+	publisher = {The MIT Press},
+	author = {Lalejini, Alexander and Ofria, Charles},
+	month = jul,
+	year = {2016},
+	pages = {372--379}
+}
+
+@inproceedings{arita_how_2016,
+	title = {How ecological inheritance can affect the evolution of complex niche construction in a 2D physical simulation},
+	url = {https://mitpress.mit.edu/sites/default/files/titles/content/conf/alife16/ch070.html},
+	doi = {10.7551/978-0-262-33936-0-ch070},
+	language = {en},
+	urldate = {2018-04-03TZ},
+	publisher = {The MIT Press},
+	author = {Arita, Takaya and Suzuki, Reiji and Chiba, Naoaki},
+	month = jul,
+	year = {2016},
+	pages = {426--433}
+}
+
+@inproceedings{stepney_jordan_2016,
+	title = {Jordan {Algebra} {AChems}: {Exploiting} {Mathematical} {Richness} for {Open} {Ended} {Design}},
+	shorttitle = {Jordan {Algebra} {AChems}},
+	url = {https://mitpress.mit.edu/sites/default/files/titles/content/conf/alife16/ch093.html},
+	doi = {10.7551/978-0-262-33936-0-ch093},
+	language = {en},
+	urldate = {2018-04-03TZ},
+	publisher = {The MIT Press},
+	author = {Stepney, Susan and Sebald, Angelika and Faulkner, Penelope},
+	month = jul,
+	year = {2016},
+	pages = {582--589}
+}
+
+@inproceedings{ofria_evolution_2016,
+	title = {The {Evolution} of {Evolvability}: {Changing} {Environments} {Promote} {Rapid} {Adaptation} in {Digital} {Organisms}},
+	shorttitle = {The {Evolution} of {Evolvability}},
+	url = {https://mitpress.mit.edu/sites/default/files/titles/content/conf/alife16/ch047.html},
+	doi = {10.7551/978-0-262-33936-0-ch047},
+	language = {en},
+	urldate = {2018-04-03TZ},
+	publisher = {The MIT Press},
+	author = {Ofria, Charles and Wiser, Michael J. and Canino-Koning, Rosangela},
+	month = jul,
+	year = {2016},
+	pages = {268--275}
+}
+
+@misc{noauthor_publications_nodate,
+	title = {Publications},
+	url = {http://lalejini.com/publications.html},
+	urldate = {2018-04-03TZ}
+}
+
+@inproceedings{virgo_lineage_2017,
+	title = {Lineage selection leads to evolvability at large population sizes},
+	isbn = {978-0-262-34633-7},
+	url = {http://cognet.mit.edu/proceed/10.7551/ecal_a_070},
+	doi = {10.7551/ecal_a_070},
+	language = {en},
+	urldate = {2018-04-03TZ},
+	publisher = {MIT Press},
+	author = {Virgo, Nathaniel and Agmon, Eran and Fernando, Chrisantha},
+	month = sep,
+	year = {2017},
+	pages = {420--427}
+}
+
+@article{bull_applied_2001,
+	title = {Applied {Evolution}},
+	volume = {32},
+	url = {https://doi.org/10.1146/annurev.ecolsys.32.081501.114020},
+	doi = {10.1146/annurev.ecolsys.32.081501.114020},
+	abstract = {Evolutionary biology is widely perceived as a discipline with relevance that lies purely in academia. Until recently, that perception was largely true, except for the often neglected role of evolutionary biology in the improvement of agricultural crops and animals. In the past two decades, however, evolutionary biology has assumed a broad relevance extending far outside its original bounds. Phylogenetics, the study of Darwin's theory of “descent with modification,” is now the foundation of disease tracking and of the identification of species in medical, pharmacological, or conservation settings. It further underlies bioinformatics approaches to the analysis of genomes. Darwin's “evolution by natural selection” is being used in many contexts, from the design of biotechnology protocols to create new drugs and industrial enzymes, to the avoidance of resistant pests and microbes, to the development of new computer technologies. These examples present opportunities for education of the public and for nontraditional career paths in evolutionary biology. They also provide new research material for people trained in classical approaches.},
+	number = {1},
+	urldate = {2018-04-02TZ},
+	journal = {Annual Review of Ecology and Systematics},
+	author = {Bull, J. J. and Wichman, H. A.},
+	year = {2001},
+	pages = {183--217}
+}
+
+@article{helmus_phylogenetic_2007,
+	title = {Phylogenetic {Measures} of {Biodiversity}.},
+	volume = {169},
+	issn = {0003-0147},
+	url = {https://www.journals.uchicago.edu/doi/10.1086/511334},
+	doi = {10.1086/511334},
+	abstract = {We developed a theoretical framework based on phylogenetic comparative methods to integrate phylogeny into three measures of biodiversity: species variability, richness, and evenness. These metrics can be used in conjunction with permutation procedures to test for phylogenetic community structure. As an illustration, we analyzed data on the composition of 58 lake fish communities in Wisconsin. The fish communities showed phylogenetic underdispersion, with communities more likely to contain closely related species. Using information about differences in environmental characteristics among lakes, we demonstrated that phylogenetic underdispersion in fish communities was associated with environmental factors. For example, lakes with low pH were more likely to contain species in the same clade of acid‐tolerant species. Our metrics differ from existing metrics used to calculate phylogenetic community structure, such as net relatedness index and Faith’s phylogenetic diversity. Our metrics have the advantage of providing an integrated and easy‐to‐understand package of phylogenetic measures of species variability, richness, and evenness with well‐defined statistical properties. Furthermore, they allow the easy evaluation of contributions of individual species to different aspects of the phylogenetic organization of communities. Therefore, these metrics should aid with the incorporation of phylogenetic information into strategies for understanding biodiversity and its conservation.},
+	number = {3},
+	urldate = {2018-04-01TZ},
+	journal = {The American Naturalist},
+	author = {Helmus, Matthew R. and Bland, Thomas J. and Williams, Christopher K. and Ives, Anthony R.},
+	month = mar,
+	year = {2007},
+	pages = {E68--E83}
+}
+
 @article{li_benchmark_2013,
 	title = {Benchmark {Functions} for {CEC}’2013 {Special} {Session} and {Competition} on {Niching} {Methods} for {Multimodal} {Function} {Optimization}},
 	language = {en},
@@ -544,7 +649,6 @@ Diversity and competition are more likely than cooperation to lead to gut microb
 	year = {1990},
 	pages = {26--38}
 }
-
 @misc{noauthor_evolutionary_nodate,
 	title = {Evolutionary computation {\textbar} {Nature} {Reviews} {Genetics}},
 	url = {https://www.nature.com/articles/35076523},
@@ -651,6 +755,7 @@ Diversity and competition are more likely than cooperation to lead to gut microb
 	note = {arXiv: 1504.04909},
 	keywords = {Computer Science - Artificial Intelligence, Computer Science - Neural and Evolutionary Computing, Computer Science - Robotics, Quantitative Biology - Populations and Evolution}
 }
+
 @incollection{goldberg_comparative_1991,
 	title = {A comparative analysis of selection schemes used in genetic algorithms},
 	volume = {1},
@@ -1120,7 +1225,6 @@ Finally I introduce Eco-EA, a general form of an evolutionary algorithm that ass
 	keywords = {Lotka-Volterra equation, coexistence, competition, consumer–resource model, fitness differences, impact niche, mechanistic models, niche overlap, requirement niche},
 	pages = {161--177}
 }
-
 @inproceedings{helmuth_general_2015,
 	address = {New York, NY, USA},
 	series = {{GECCO} '15},
@@ -1252,6 +1356,7 @@ The vaginal microbiome is dynamic, varying over time in composition and function
 	keywords = {Alps, Carpathians, Molecular-genetic diversity, Potential habitat diversity, Protected areas, Vascular plant species richness},
 	pages = {259--281}
 }
+
 @article{faust_metagenomics_2015,
 	series = {Environmental microbiology • {Extremophiles}},
 	title = {Metagenomics meets time series analysis: unraveling microbial community dynamics},
@@ -1692,7 +1797,6 @@ Cane toads (Bufo marinus) are large anurans (weighing up to 2 kg) that were intr
 	year = {2009},
 	keywords = {Science / General}
 }
-
 @book{holland_signals_2012,
 	title = {Signals and {Boundaries}: {Building} {Blocks} for {Complex} {Adaptive} {Systems}},
 	isbn = {978-0-262-01783-1},
@@ -1838,6 +1942,7 @@ Holland offers a framework for analyzing complex adaptive systems through consid
 	year = {2008},
 	pages = {610--617}
 }
+
 @article{paudyal_dirhodium-catalyzed_2016,
 	title = {Dirhodium-catalyzed {C}-{H} arene amination using hydroxylamines},
 	volume = {353},
@@ -2764,7 +2869,6 @@ Holland offers a framework for analyzing complex adaptive systems through consid
 	year = {2008},
 	pages = {7899--7906}
 }
-
 @article{wielgoss_mutation_2013,
 	title = {Mutation rate dynamics in a bacterial population reflect tension between adaptation and genetic load},
 	volume = {110},
@@ -2955,6 +3059,7 @@ Holland offers a framework for analyzing complex adaptive systems through consid
 	month = may,
 	year = {2017}
 }
+
 @article{harcombe_metabolic_2014,
 	title = {Metabolic {Resource} {Allocation} in {Individual} {Microbes} {Determines} {Ecosystem} {Interactions} and {Spatial} {Dynamics}},
 	volume = {7},
@@ -3454,7 +3559,6 @@ South African shrublands maintain diversity in many distinct regions featuring l
 	year = {2013},
 	pages = {1418--1428}
 }
-
 @article{gillespie_community_2004,
 	title = {Community {Assembly} {Through} {Adaptive} {Radiation} in {Hawaiian} {Spiders}},
 	volume = {303},
@@ -3559,6 +3663,7 @@ South African shrublands maintain diversity in many distinct regions featuring l
 	year = {2017},
 	pages = {20160816}
 }
+
 @article{watson_how_2016,
 	title = {How {Can} {Evolution} {Learn}?},
 	volume = {31},
@@ -3964,7 +4069,6 @@ South African shrublands maintain diversity in many distinct regions featuring l
 	month = mar,
 	year = {2017}
 }
-
 @article{vessman_pair-wise_nodate,
 	title = {From pair-wise interactions to triplet dynamics},
 	url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.905.7387&rep=rep1&type=pdf},
@@ -4042,6 +4146,7 @@ South African shrublands maintain diversity in many distinct regions featuring l
 	year = {1998},
 	pages = {534--539}
 }
+
 @inproceedings{yaeger_computational_1993,
 	title = {Computational genetics, physiology, metabolism, neural systems, learning, vision, and behavior or {PolyWorld}: {Life} in a new context},
 	shorttitle = {Computational genetics, physiology, metabolism, neural systems, learning, vision, and behavior or {PolyWorld}},
@@ -4511,7 +4616,6 @@ South African shrublands maintain diversity in many distinct regions featuring l
 	year = {2002},
 	pages = {133--145}
 }
-
 @article{de_souza_junior_effects_2014,
 	title = {Effects of the spatial heterogeneity on the diversity of ecosystems with resource competition},
 	volume = {393},
@@ -4620,6 +4724,7 @@ South African shrublands maintain diversity in many distinct regions featuring l
 	year = {2014},
 	pages = {703--710}
 }
+
 @inproceedings{university_of_windsor_testing_2014,
 	title = {Testing the {Effects} of {Speciation} and {Mutation} {Rates} on {Distance}-{Based} {Phylogenetic} {Tree} {Construction} {Accuracy} {Using} {EcoSim}},
 	isbn = {978-0-262-32621-6},
@@ -5117,7 +5222,6 @@ South African shrublands maintain diversity in many distinct regions featuring l
 	year = {2014},
 	pages = {539--540}
 }
-
 @inproceedings{school_of_physics_and_astronomy_university_of_minnesota_116_church_street_se_minneapolis_55455_minnesota_united_states_of_america_novel_2014,
 	title = {A {Novel} in {Vitro} {Metabolic} {Scheme} for the {Construction} of a {Minimal} {Biological} {Cell}},
 	isbn = {978-0-262-32621-6},
@@ -5233,6 +5337,7 @@ South African shrublands maintain diversity in many distinct regions featuring l
 	keywords = {Computational modeling, Law, Lead, The Settlers of Catan, cognitive agents, computer games, game simulations, multi-agent systems, persuasion symbolic model},
 	pages = {1--8}
 }
+
 @article{galway_machine_2008,
 	title = {Machine learning in digital games: a survey},
 	volume = {29},
@@ -5601,7 +5706,6 @@ South African shrublands maintain diversity in many distinct regions featuring l
 	year = {2008},
 	pages = {3734--3740}
 }
-
 @article{laland_extended_2015,
 	title = {The extended evolutionary synthesis: its structure, assumptions and predictions},
 	volume = {282},
@@ -5748,6 +5852,7 @@ IMPORTANCE The diversity of microbial communities is linked to the functioning a
 	keywords = {Alleles, Confidence intervals, DNA recombination, Evolutionary adaptation, Evolutionary genetics, Fitness epistasis, Permutation, Variant genotypes},
 	pages = {e1005247}
 }
+
 @misc{noauthor_spdep_nodate,
 	title = {spdep citation info},
 	url = {https://cran.r-project.org/web/packages/spdep/citation.html},
@@ -6180,7 +6285,6 @@ The approach to modeling presented here has several implications for conservatio
 	keywords = {Complexity, Ecology, Environmental Monitoring/Analysis, Landscape Ecology, Theoretical Ecology/Statistics},
 	pages = {151--168}
 }
-
 @incollection{noauthor_coevolutionary_2005,
 	series = {Natural {Computing} {Series}},
 	title = {Coevolutionary {Structured} {Models}},
@@ -6269,6 +6373,7 @@ Epistatic interactions and changes in the selection environment facilitate the e
 	year = {2016},
 	pages = {e1500921}
 }
+
 @inproceedings{cantu-paz_topologies_1999,
 	address = {San Francisco, CA, USA},
 	series = {{GECCO}'99},
@@ -6748,7 +6853,6 @@ Rapid evolution challenges the assumption that evolution is too slow to impact s
 	year = {2007},
 	keywords = {Nature / Environmental Conservation \& Protection, Science / Life Sciences / Biology, Science / Life Sciences / Botany, Science / Life Sciences / Ecology, Science / Life Sciences / Evolution, Science / Life Sciences / Zoology / General}
 }
-
 @article{pressey_conservation_2007,
 	title = {Conservation planning in a changing world},
 	volume = {22},
@@ -6858,6 +6962,7 @@ The observed cooperation between genes, cells, tissues, and higher organisms rep
 	year = {1991},
 	pages = {18--32}
 }
+
 @book{noauthor_evolutionary_2009,
 	address = {Cambridge, UK},
 	edition = {1 edition},
@@ -7298,7 +7403,6 @@ The ecological and anthropogenic process itself and its characteristics under in
 	keywords = {Adaptive divergence, Poecilia reticulata, eco-evolutionary dynamics, gene flow, natural selection},
 	pages = {37--47}
 }
-
 @article{rayfield_connectivity_2010,
 	title = {Connectivity for conservation: a framework to classify network measures},
 	volume = {92},
@@ -7432,6 +7536,7 @@ The ecological and anthropogenic process itself and its characteristics under in
 	year = {2014},
 	pages = {963--964}
 }
+
 @inproceedings{computer_science_department_of_frankfurt_am_main_university_of_applied_sciences_1_nibelungenplatz_60318_frankfurt_am_main_germany_framework_2014,
 	title = {Framework for {Adaptive} {Swarm} {Simulation} and {Optimization} {Using} {MapReduce}},
 	isbn = {9780262326216},
@@ -8281,7 +8386,6 @@ The ecological and anthropogenic process itself and its characteristics under in
 	year = {2014},
 	pages = {239--246}
 }
-
 @inproceedings{computer_science_department_union_college_schenectady_ny_12308_evolution_2014,
 	title = {Evolution of {Locomotion} on a {Physical} {Tensegrity} {Robot}},
 	isbn = {9780262326216},
@@ -8426,6 +8530,7 @@ The ecological and anthropogenic process itself and its characteristics under in
 	year = {2014},
 	pages = {168--175}
 }
+
 @inproceedings{ubiant_lyon_france_bootstrapping_2014,
 	title = {On {Bootstrapping} {Sensori}-{Motor} {Patterns} for a {Constructivist} {Learning} {System} in {Continuous} {Environments}},
 	isbn = {9780262326216},
@@ -8791,7 +8896,6 @@ The ecological and anthropogenic process itself and its characteristics under in
 	year = {2014},
 	pages = {89--94}
 }
-
 @article{moritoh_evaluation_2014,
 	title = {Evaluation for distance learning scheme on distributed multiple server system},
 	volume = {19},
@@ -8972,6 +9076,7 @@ The ecological and anthropogenic process itself and its characteristics under in
 	year = {2014},
 	pages = {441--455}
 }
+
 @article{dorin_practice_2014,
 	title = {The practice of agent-based model visualization},
 	volume = {20},
@@ -9273,7 +9378,6 @@ The ecological and anthropogenic process itself and its characteristics under in
 	year = {2003},
 	pages = {189--197}
 }
-
 @incollection{green_global_2006,
 	series = {Landscape {Series}},
 	title = {{THE} {GLOBAL} {PICTURE}},
@@ -9518,6 +9622,7 @@ The ecological and anthropogenic process itself and its characteristics under in
 	year = {2013},
 	pages = {8}
 }
+
 @misc{nahum_unpublished_nodate,
 	title = {Unpublished {Data}},
 	author = {Nahum, Joshua and Kerr, Benjamin}
@@ -9896,7 +10001,6 @@ One of the striking features of evolution is the appearance of novel structures 
 	year = {2013},
 	keywords = {COMPUTERS / General, Psychology / Cognitive Psychology}
 }
-
 @inproceedings{ollion_why_2011,
 	title = {Why and how to measure exploration in behavioral space},
 	url = {http://dl.acm.org/citation.cfm?id=2001613},
@@ -9977,6 +10081,7 @@ One of the striking features of evolution is the appearance of novel structures 
 	year = {2013},
 	pages = {119--135}
 }
+
 @article{porumbel_evolutionary_2010,
 	title = {An evolutionary approach with diversity guarantee and well-informed grouping recombination for graph coloring},
 	volume = {37},
@@ -10328,7 +10433,6 @@ One of the striking features of evolution is the appearance of novel structures 
 	year = {2003},
 	pages = {167--175}
 }
-
 @inproceedings{baptista_step_2013,
 	title = {Step evolution: {Improving} the performance of open-ended evolution simulations},
 	shorttitle = {Step evolution},
@@ -10429,6 +10533,7 @@ One of the striking features of evolution is the appearance of novel structures 
 	year = {2010},
 	pages = {43--48}
 }
+
 @article{sahney_links_2010,
 	title = {Links between global taxonomic diversity, ecological diversity and the expansion of vertebrates on land},
 	volume = {6},
@@ -10970,7 +11075,6 @@ One of the striking features of evolution is the appearance of novel structures 
 	year = {1980},
 	pages = {93--107}
 }
-
 @book{arratia_fuentes_recent_2004,
 	address = {München},
 	title = {Recent advances in the origin and early radiation of vertebrates: honoring {Hans}-{Peter} {Schultze}},
@@ -11105,6 +11209,7 @@ One of the striking features of evolution is the appearance of novel structures 
 	year = {2000},
 	pages = {409--416}
 }
+
 @article{mcglynn_test_2013,
 	title = {A test of species-energy theory: patch occupancy and colony size in tropical rainforest litter-nesting ants},
 	volume = {122},
@@ -11573,7 +11678,6 @@ One of the striking features of evolution is the appearance of novel structures 
 	year = {2014},
 	pages = {895--902}
 }
-
 @inproceedings{cano_gpu-parallel_2014,
 	title = {{GPU}-parallel subtree interpreter for genetic programming},
 	isbn = {9781450326629},
@@ -11715,6 +11819,7 @@ One of the striking features of evolution is the appearance of novel structures 
 	year = {2014},
 	pages = {815--822}
 }
+
 @inproceedings{nallaperuma_fixed_2014,
 	title = {A fixed budget analysis of randomized search heuristics for the traveling salesperson problem},
 	isbn = {9781450326629},
@@ -12227,7 +12332,6 @@ One of the striking features of evolution is the appearance of novel structures 
 	year = {2014},
 	pages = {49--56}
 }
-
 @inproceedings{tantar_asymmetric_2014,
 	title = {Asymmetric quadratic landscape approximation model},
 	isbn = {9781450326629},
@@ -12357,6 +12461,7 @@ One of the striking features of evolution is the appearance of novel structures 
 	year = {2014},
 	pages = {421--428}
 }
+
 @inproceedings{liu_energy_2014,
 	title = {Energy aware virtual machine placement scheduling in cloud computing based on ant colony optimization approach},
 	isbn = {9781450326629},
@@ -12875,7 +12980,6 @@ One of the striking features of evolution is the appearance of novel structures 
 	year = {2014},
 	pages = {1439--1446}
 }
-
 @inproceedings{sutton_superpolynomial_2014,
 	title = {Superpolynomial lower bounds for the (1+1) {EA} on some easy combinatorial problems},
 	isbn = {9781450326629},
@@ -13005,6 +13109,7 @@ One of the striking features of evolution is the appearance of novel structures 
 	year = {2014},
 	pages = {1367--1374}
 }
+
 @inproceedings{dang_evolution_2014,
 	title = {Evolution under partial information},
 	isbn = {9781450326629},
@@ -13530,7 +13635,6 @@ One of the striking features of evolution is the appearance of novel structures 
 	year = {2014},
 	pages = {1071--1078}
 }
-
 @inproceedings{bartoli_playing_2014,
 	title = {Playing regex golf with genetic programming},
 	isbn = {9781450326629},
@@ -13661,6 +13765,7 @@ One of the striking features of evolution is the appearance of novel structures 
 	year = {2014},
 	pages = {785--792}
 }
+
 @inproceedings{ahmed_improved_2014,
 	title = {An improved multi-start particle swarm-based algorithm for protein structure comparison},
 	isbn = {9781450326629},
@@ -13917,7 +14022,6 @@ One of the striking features of evolution is the appearance of novel structures 
 	year = {2013},
 	pages = {126--133}
 }
-
 @article{tan_introduction_2006,
 	title = {Introduction to data mining},
 	journal = {WP Co},
@@ -13991,6 +14095,7 @@ One of the striking features of evolution is the appearance of novel structures 
 	year = {2002},
 	pages = {496--499}
 }
+
 @article{whittaker_island_2007,
 	title = {The island immaturity–speciation pulse model of island evolution: an alternative to the “diversity begets diversity” model},
 	volume = {30},
@@ -14461,7 +14566,6 @@ growth and control by mechanical techniques},
 	year = {2012},
 	pages = {192--199}
 }
-
 @article{delbart_can_2012,
 	title = {Can {Land} {Managers} {Control} {Japanese} {Knotweed}? {Lessons} from {Control} {Tests} in {Belgium}},
 	volume = {50},
@@ -14621,6 +14725,7 @@ growth and control by mechanical techniques},
 	keywords = {Fiction / General, Health \& Fitness / Exercise, Literary Collections / Essays, Literary Collections / General, Literary Criticism / Reference, Sports \& Recreation / Walking},
 	pages = {218--224}
 }
+
 @book{kanami_sotoba_nodate,
 	title = {Sotoba {Komachi}},
 	language = {en},
@@ -15215,7 +15320,6 @@ the {Crum} {Woods} of {Swarthmore} {College} in {Spring} 2006},
 	url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1365-3180.2011.00866.x/full},
 	urldate = {2011-06-16TZ}
 }
-
 @article{dassonville_niche_2011,
 	title = {Niche construction by the invasive {Asian} knotweeds (species complex \textit{{Fallopia}}): impact on activity, abundance and community structure of denitrifiers and nitrifiers},
 	volume = {13},
@@ -15374,6 +15478,7 @@ the {Crum} {Woods} of {Swarthmore} {College} in {Spring} 2006},
 	keywords = {greenhouse, growth rate, japonica, nitrogen, nitrogen allocation, nitrogen limitation},
 	pages = {287--292}
 }
+
 @article{bashtanova_review:_2009,
 	title = {Review: {Physiological} approaches to the improvement of chemical control of {Japanese} {Knotweed}},
 	volume = {57},
