Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -1,6 +1,6 @@
 \documentclass[letterpaper]{article}
 
-\usepackage{natbib,alifeconf}  %% The order is important
+\usepackage{natbib,paper/alifeconf}  %% The order is important
 \usepackage{amsmath}
 \usepackage{hyperref}
 
@@ -441,7 +441,7 @@ We thank members of the MSU Digital Evolution Lab for helpful comments and sugge
 
 \footnotesize
 \bibliographystyle{apalike}
-\bibliography{Zotero,bibliography} % replace by the name of your .bib file
+\bibliography{paper/Zotero,paper/bibliography} % replace by the name of your .bib file
 
 \end{document}
 
